--- a/portfolio2.html
+++ b/portfolio2.html
@@ -21,7 +21,7 @@
                 <a href="#about" class="nav-link">About</a>
                 <a href="#skills" class="nav-link">Skills</a>
                 <a href="#contact" class="nav-link">Contact</a>
-                <a href="#contact" class="nav-link">photoshop</a>                
+                <a href="new.html" class="nav-link">photoshop</a>                
             </nav>
         </div>
     </header>
